# Django-ORM

./: .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  settings.py  utils.py
requirements/: local.txt  production.txt
